<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_user">

    <fragment
        android:id="@+id/nav_user"
        android:name="com.kastapp.sample.ui.user.UserInfoFragment"
        android:label="@string/label_user"
        tools:layout="@layout/fragment_user_info" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.kastapp.sample.ui.feed.FeedListFragment"
        android:label="@string/label_feed"
        tools:layout="@layout/fragment_feed_list" />

    <fragment
        android:id="@+id/nav_permission"
        android:name="com.kastapp.sample.ui.permission.PermissionsFragment"
        android:label="@string/label_permission"
        tools:layout="@layout/fragment_permission" />
</navigation>